--- a/.github/workflows/ci_api_gateway_service.yml
+++ b/.github/workflows/ci_api_gateway_service.yml
@@ -1,6 +1,10 @@
-name: CI Apigateway Service
+name: CI API Gateway Service
 
-on: push
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   test:
@@ -25,4 +29,11 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: mvn --batch-mode clean test
+        run: mvn --batch-mode clean install
+
+      - name: Upload test reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-reports
+          path: target/surefire-reports/
