--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,56 +7,21 @@
 #    import: optional:configserver:http://config-server:8888
 
 
-#server:
-#  port: 9000
-#
-#spring:
-#  application:
-#    name: api-gateway-service
-#  data:
-#    redis:
-#      host: redis
-#      port: 6379
-#  security:
-#    oauth2:
-#      resourceserver:
-#        jwt:
-#          jwk-set-uri: http://identity-service:8086/.well-known/jwks.json
-#
-#cors:
-#  allowed-origins: "http://localhost:3006"
-#
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://eureka-server:8761/eureka/
-#  instance:
-#    prefer-ip-address: true
-#    hostname: api-gateway-service
-#    instance-id: ${spring.application.name}:${server.port}
-#
-#logging:
-#  level:
-#    org.springframework.data.redis: DEBUG
-
-
 server:
   port: 9000
 
 spring:
   application:
     name: api-gateway-service
-
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
-
   security:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://localhost:8086/.well-known/jwks.json
+          jwk-set-uri: http://identity-service:8086/.well-known/jwks.json
 
 cors:
   allowed-origins: "http://localhost:3006"
@@ -64,7 +29,7 @@ cors:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
   instance:
     prefer-ip-address: true
     hostname: api-gateway-service
@@ -73,3 +38,38 @@ eureka:
 logging:
   level:
     org.springframework.data.redis: DEBUG
+
+
+#server:
+#  port: 9000
+#
+#spring:
+#  application:
+#    name: api-gateway-service
+#
+#  data:
+#    redis:
+#      host: localhost
+#      port: 6379
+#
+#  security:
+#    oauth2:
+#      resourceserver:
+#        jwt:
+#          jwk-set-uri: http://localhost:8086/.well-known/jwks.json
+#
+#cors:
+#  allowed-origins: "http://localhost:3006"
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
+#  instance:
+#    prefer-ip-address: true
+#    hostname: api-gateway-service
+#    instance-id: ${spring.application.name}:${server.port}
+#
+#logging:
+#  level:
+#    org.springframework.data.redis: DEBUG
